added devise, created user table

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,4 @@
-<h1>No silicon heaven? Preposterous!</h1>
-<h2>Where would all the calculators go?</h2>
+<div class="hero">
+  <h1>No silicon heaven? Preposterous!</h1>
+  <h2>Where would all the calculators go?</h2>
+</div>
