--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,9 @@
 <div class="hero">
-  <h1>No silicon heaven? Preposterous!</h1>
-  <h2>Where would all the calculators go?</h2>
+  <br />
+  <div class="frosty col-10 offset-1 text-center">
+    <%# to be replaced with banner image %>
+    <h2>welcome to</h2>
+    <h1>WyrmNest</h1>
+    <%# add login sign up forum buttons/links %>
+  </div>
 </div>
