--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <div id="header">
+      <div class="container">
+        <nav class="navbar fixed-top navbar-inverse bg-inverse">
+          <a class="navbar-brand" href="/">Wyrmnest</a>
+        </nav>
+      </div>
+    </div>
+
     <% if notice.present? %>
       <p class="alert alert-info"><%= notice %></p>
     <% end %>
@@ -20,15 +28,17 @@
     <%= yield %>
     <div id="footer">
       <div class="container">
-        <% if user_signed_in? %>
-          <%= link_to 'logout', destroy_user_session_path, method: :delete %>&nbsp;
-        <% else %>
-          <%= link_to 'login', new_user_session_path %>&nbsp;
-          <%= link_to 'register', new_user_registration_path %>&nbsp;
-        <% end %>
-        <%= link_to 'forum', topics_path %>&nbsp;
-        <%= link_to 'main page', root_path %>&nbsp;
-        <%# add link to forum once forum is created %>
+        <nav class="navbar sticky-bottom navbar-inverse bg-inverse">
+          <% if user_signed_in? %>
+            <%= link_to 'logout', destroy_user_session_path, method: :delete %>&nbsp;
+          <% else %>
+            <%= link_to 'login', new_user_session_path %>&nbsp;
+            <%= link_to 'register', new_user_registration_path %>&nbsp;
+          <% end %>
+          <%= link_to 'forum', topics_path %>&nbsp;
+          <%= link_to 'main page', root_path %>&nbsp;
+          <%# add link to forum once forum is created %>
+        </nav>
       </div>
     </div>
   </body>
