--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,16 @@
-<h1><%= @topic.title %></h1>
-<p><%= @topic.content %></p>
+<div class="box col-10 offset-1">
+  <h1 class="title"><%= @topic.title %></h1>
+  <p><%= @topic.content %></p>
+  <small><%= @topic.comments.count %><%= " comments" %></small><br />
+  <div class="box col-12 offset-0 padding-0">
+    <%# add user info & avatar %>
+    <%= render @topic.comments %>
+  </div>
+  <br />
+  <%= render "comments/new" %>
 
-<%= link_to 'edit', edit_topic_path(@topic) %>
-<%= link_to 'delete', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure you want to delete this post?' } %>
-<%= link_to 'home', topics_path %>
+
+  <%= link_to 'edit', edit_topic_path(@topic) %>
+  <%= link_to 'delete', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure you want to delete this post?' } %>
+  <%= link_to 'home', topics_path %>
+</div>
