--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -3,5 +3,5 @@
 <%= simple_form_for ([@topic, @comment]) do |f| %>
   <%= f.input :comment, label: false, label_html: { class: "commentbox" }, placeholder: "add a comment" %>
   <br />
-  <%= f.submit 'update', class: 'btn btn-info btn-block' %>
+  <%= f.submit 'update', class: 'btn btn-success btn-block' %>
 <% end %>
