--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for ([@topic, @topic.comments.create]) do |f| %>
-  <%= f.input :comment, label: false, label_html: { class: "commentbox" }, placeholder: "add a comment" %>
+  <%= f.input :comment, label: false, placeholder: "add a comment..." %>
   <br />
-  <%= f.submit 'post', class: 'btn btn-info btn-block' %>
+  <%= f.submit 'post', class: 'btn btn-success btn-block' %>
 <% end %>
