--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,10 @@
                 input_html: { autocomplete: "email" },
                 label: false,
                 placeholder: "email" %>
+    <%= f.input :username,
+                required: true,
+                label: false,
+                placeholder: "username" %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
