--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,13 @@
-<h1>userpage</h1>
-<%# add avatar, join date, post number, about, recent posts %>
+
+<%# fix avatar, add about, recent posts %>
 <%# add incubation drawer, dragon stable, img gallery %>
-<small>Member for <%= time_ago_in_words(@user.created_at) %></small>
-<%= link_to "account settings", edit_user_registration_path(@user) %>
+<% if @user.avatar.attached? %>
+  <image src="<%= (url_for(@user.avatar)) %>">
+<% end %>
+<small>
+  Member for <%= time_ago_in_words(@user.created_at) %><br>
+  <%= @user.comments.count %> posts
+</small>
+<br />
+
+<%= link_to "account settings", edit_user_registration_path(@user), class: "btn btn-sm btn-danger" %>
