--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,22 +15,24 @@
                 required: false,
                 label: false,
                 placeholder: "new password",
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" } %><br>
     <%= f.input :password_confirmation,
                 required: false,
                 label: false,
                 placeholder: "confirm new password",
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" } %><br>
     <%= f.input :username,
                 required: true,
                 label: false,
-                placeholder: "username" %>
+                placeholder: "username" %><br>
     <%= f.input :current_password,
                 hint: " we need your current password to confirm your changes",
                 required: true,
                 label: false,
                 placeholder: "current password",
-                input_html: { autocomplete: "current-password" } %>
+                input_html: { autocomplete: "current-password" } %><br>
+    <%= f.label "profile photo" %>
+    <%= f.file_field :avatar %><br />
   </div>
 
   <div class="form-actions">
