--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,4 @@
-<div class="box col-10 offset-1">
+<div class="commentbox col-10 offset-1">
   <h1 class="title"><%= @topic.title %></h1>
   <p><%= @topic.content %></p>
   <small><%= @topic.comments.count %>
