--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,34 @@
 
 <%# fix avatar, add about, recent posts %>
 <%# add incubation drawer, dragon stable, img gallery %>
-<% if @user.avatar.attached? %>
-  <image src="<%= (url_for(@user.avatar)) %>">
-<% end %>
-<small>
-  Member for <%= time_ago_in_words(@user.created_at) %><br>
-  <%= @user.comments.count %> posts
-</small>
-<br />
+<div class="usertop offset-1">
+  <% if @user.avatar.attached? %>
+    <image src="<%= (url_for(@user.avatar)) %>"></image>
+  <% end %>
+  <small>
+    Member for <%= time_ago_in_words(@user.created_at) %><br>
+    <%= @user.comments.count %> posts
+  </small>
+  <br />
 
-<%= link_to "account settings", edit_user_registration_path(@user), class: "btn btn-sm btn-danger" %>
+  <%= link_to "edit profile", edit_user_registration_path(@user), class: "col-3 btn btn-sm btn-danger" %><br><br />
+</div>
+<div class="userbody_left col-5 float-left">
+  <div class="userinfo commentbox">
+
+  </div>
+  <br>
+  <div class="usereggs commentbox">
+
+  </div>
+</div>
+<div class="userbody_right col-5 offset-6 float-right">
+
+  <div class="userdragons commentbox">
+
+  </div>
+  <br>
+  <div class="userpics commentbox">
+
+  </div>
+</div>
