--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,14 +5,16 @@
     <% if @user.avatar.attached? %>
 <%#      <image src="<%=(url_for(@user.avatar))%><%#">
 <%#    <% end %>
-    <%= comment.user.username %><%= ": " %>
-    <%= comment.comment %><br />
-    <% if current_user == comment.user %>
-      <sub>
-        <%= link_to "edit", edit_topic_comment_path(comment.topic, comment) %>&nbsp;
-        <%= link_to "delete", [comment.topic, comment], method: :delete, data: { confirm: "Are you sure?" } %>
-          
-      </sub>
-    <% end %>
+    <div>
+      <%= comment.user.username %>|
+      <%= comment.comment %><br />
+      <% if current_user == comment.user %>
+        <sub>
+          <%= link_to "edit", edit_topic_comment_path(comment.topic, comment) %>&nbsp;
+          <%= link_to "delete", [comment.topic, comment], method: :delete, data: { confirm: "Are you sure?" } %>
+            
+        </sub>
+      <% end %>
+    </div>
   </p>
 </div>
