--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,51 +1,55 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="commentbox col-10 offset-1 text-center">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true, label: false %>
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true, label: false %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :password,
+                    hint: " leave it blank if you don't want to change it",
+                    required: false,
+                    label: false,
+                    placeholder: "new password",
+                    input_html: { autocomplete: "new-password" } %><br>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    label: false,
+                    placeholder: "confirm new password",
+                    input_html: { autocomplete: "new-password" } %><br>
+        <%= f.input :username,
+                    required: true,
+                    label: false,
+                    placeholder: "username" %><br>
+        <%= f.input :current_password,
+                    hint: " we need your current password to confirm your changes",
+                    required: true,
+                    label: false,
+                    placeholder: "current password",
+                    input_html: { autocomplete: "current-password" } %>
+        <br />
+      </div>
+
+      <%= form_with(url: avatar_path(resource), method: :post, multipart: true) do %>
+        <%= file_field_tag :avatar %>
+        <%= submit_tag "upload photo" %>
     <% end %>
+    <br>
 
-    <%= f.input :password,
-                hint: " leave it blank if you don't want to change it",
-                required: false,
-                label: false,
-                placeholder: "new password",
-                input_html: { autocomplete: "new-password" } %><br>
-    <%= f.input :password_confirmation,
-                required: false,
-                label: false,
-                placeholder: "confirm new password",
-                input_html: { autocomplete: "new-password" } %><br>
-    <%= f.input :username,
-                required: true,
-                label: false,
-                placeholder: "username" %><br>
-    <%= f.input :current_password,
-                hint: " we need your current password to confirm your changes",
-                required: true,
-                label: false,
-                placeholder: "current password",
-                input_html: { autocomplete: "current-password" } %>
-    <br />
-  </div>
+      <div class="form-actions col-6 offset-3">
+        <%= f.button :submit, "update", class: "btn btn-success btn-block" %>
+      </div>
+    <% end %>
+    <div class="box col-6 offset-3">
+        <h3>Close your account</h3>
 
-  <%= form_with(url: avatar_path(resource), method: :post, multipart: true) do %>
-    <%= file_field_tag :avatar %>
-    <%= submit_tag "upload photo" %>
-<% end %>
+        <p>Unhappy? <%= link_to "Delete my account", registration_path(resource_name), class: "btn btn-sm btn-danger", data: { confirm: "Are you sure?" }, method: :delete %></p>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "update", class: "btn btn-success btn-block" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+    <%= link_to "Back", :back %>
+</div>
