--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,40 @@
-<br />
+<div class="box col-10 offset-1 text-center">
+    <h2>create a new account</h2><br>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" },
-                label: false,
-                placeholder: "email" %><br>
-    <%= f.input :username,
-                required: true,
-                label: false,
-                placeholder: "username" %><br>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" },
-                label: false,
-                placeholder: "password" %><br>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" },
-                label: false,
-                placeholder: "confirm password" %><br>
-    <%= f.label "profile photo" %>
-    <%= f.file_field :avatar %><br />
-  </div>
+      <div class="form-inputs">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" },
+                    label: false,
+                    placeholder: "email" %><br>
+        <%= f.input :username,
+                    required: true,
+                    label: false,
+                    placeholder: "username" %><br>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" },
+                    label: false,
+                    placeholder: "password" %><br>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" },
+                    label: false,
+                    placeholder: "confirm password" %><br>
+        <%= f.label "user avatar" %>
+        <%= f.file_field :avatar %><br />
+      </div>
+      <br>
 
-  <div class="form-actions">
-    <%= f.button :submit, "create account", class: "btn btn-success" %>
-  </div>
-<% end %>
+      <div class="form-actions">
+        <%= f.button :submit, "submit", class: "frontbutton btn btn-lg btn-block btn-danger" %>
+      </div>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+</div>
