added google search api

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
               <%= link_to 'register', new_user_registration_path, class: 'nav-link' %>
             </li>
           <% end %>
+          <script async src="https://cse.google.com/cse.js?cx=003646542739026798606:1frgpahxgrf"></script>
+          <div class="gcse-search"></div>
         </ul>
       </nav>
     </div>
