updated search api

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,6 @@
   </head>
 
   <body>
-    <script async src="https://cse.google.com/cse.js?cx=003646542739026798606:1frgpahxgrf"></script>
-          <div class="gcse-search"></div>
     <div class="topnav">
       <nav class="navbar navbar-inverse bg-inverse">
         <a class="navbar-brand" href="/">Wyrmnest</a>
@@ -58,6 +56,7 @@
           <% end %>
           <%= link_to 'forum', topics_path %>&nbsp;
           <%= link_to 'main page', root_path %>&nbsp;
+          <%= link_to 'search', search_path %>
         </nav>
       </div>
     </div>
