--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,14 @@
     </small>
     <br />
 
-    <%= link_to "edit profile", edit_user_registration_path(@user), class: "col-3 btn btn-sm btn-danger" %><br><br />
+    <% if current_user && current_user == @user %>
+      <%= link_to "edit profile", edit_user_registration_path(@user), class: "col-3 btn btn-sm btn-danger" %><br><br />
+    <% end %>
   </div>
   <div class="userbody_left">
     <div class="userposts commentbox">
-      <p>recent posts</p>
+      <h3 class="text-center">recent posts</h3>
+      <hr class="line">
       <% @user.comments.take(5).each do |comment| %>
         <i><%= "\"" %><%= comment.comment %><%= "\"" %></i><%= " on " %><b><%= link_to comment.topic.title, topic_path(comment.topic) %></b><br>
       <% end %>
@@ -24,6 +27,8 @@
 
 
     <div class="userpics commentbox">
+      <h3 class="text-center">image gallery</h3>
+      <hr class="line">
 
     </div>
   </div>
@@ -33,10 +38,14 @@
   <div class="userbody_right">
 
     <div class="usereggs commentbox">
+      <h3 class="text-center">my eggs</h3>
+      <hr class="line">
 
     </div>
     <br>
     <div class="userdragons commentbox">
+      <h3 class="text-center">my dragons</h3>
+      <hr class="line">
 
     </div>
   </div>
