--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="google-site-verification" content="pUZ6hKRj0LXxbRZWBlktUM8GbhE2F55XjBlCaq_k9Ls" />
+    <script async src="https://cse.google.com/cse.js?cx=003646542739026798606:1frgpahxgrf"></script>
   </head>
 
   <body>
