--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,1 +1,30 @@
-<h1>About WyrmNest</h1>
+<br />
+<br />
+<br />
+<div class="box col-10 offset-1">
+  <h1 class="text-center">About WyrmNest</h1>
+  <div class="col-12">
+    <%= image_tag 'redbaby.png', class: 'img-fluid' %>
+    <%= image_tag 'redegg.png', class: 'img-fluid' %>
+    <%= image_tag 'bluebaby.png', class: 'img-fluid' %>
+    <%= image_tag 'blueegg.png', class: 'img-fluid' %>
+    <%= image_tag 'greenbaby.png', class: 'img-fluid' %>
+    <%= image_tag 'greenegg.png', class: 'img-fluid' %>
+    <%= image_tag 'sootbaby.png', class: 'img-fluid' %>
+    <%= image_tag 'sootegg.png', class: 'img-fluid' %>
+    <%= image_tag 'opalbaby.png', class: 'img-fluid' %>
+    <%= image_tag 'opalegg.png', class: 'img-fluid' %>
+  </div>
+  <hr>
+  <p>
+    Wyrmnest is a message board and virtual pet site built by <a target="_blank" href="https://shannakershner.netlify.com">Shanna Kershner</a>, a student at the UT Austin Coding Boot Camp.
+    The site is built with Ruby on Rails and incorporates a Google Custom Search Engine API to easily find discussion topics.
+  </p>
+</div>
+<br />
+<br />
+<br />
+<br class="clr" />
+
+
+
