--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -1,3 +1,11 @@
-<script async src="https://cse.google.com/cse.js?cx=003646542739026798606:1frgpahxgrf"></script>
-<br>
-<div class="gcse-search"></div>
+<br />
+<div class="pad">
+  <div class="commentbox col-10 offset-1">
+    <br /><br />
+    <script async src="https://cse.google.com/cse.js?cx=003646542739026798606:1frgpahxgrf"></script>
+    <br>
+    <div class="gcse-search"></div>
+    <br><br /><br />
+  </div>
+</div>
+<br />
