--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -13,13 +13,13 @@ body {
 }
 
 #footer {
-  background: image_url('15.jpg');
-  position: relative;
-  bottom: 0;
+
+
+  bottom: 0px;
   margin-top: 10px;
   width: 100%;
   min-height: 100px;
-  background-color: rgba(36, 32, 33, 0.9);
+  background: image_url('15.jpg');
   color: white;
 }
 
