--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -18,10 +18,16 @@
   <br />
   <%= render "comments/new" %>
 
-  <% if current_user == @topic.user %>
-    <%= link_to 'edit', edit_topic_path(@topic) %> |
-    <%= link_to 'delete', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure you want to delete this post?' } %> |
-  <% end %>
+  <div class="col-10 offset-1 text-center">
+    <br>
+    <% if current_user == @topic.user %>
+      |&nbsp;<%= link_to 'edit', edit_topic_path(@topic) %>&nbsp;
+      |&nbsp;<%= link_to 'delete', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure you want to delete this post?' } %>&nbsp;
+      |&nbsp;<%= link_to 'back', topics_path %>&nbsp;
+      |
+    <% end %>
+  </div>
   <br>
-  <%= link_to 'back', topics_path, class: 'btn btn-sm btn-block frontbutton' %>
+  
+  <br />
 </div>
